--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+prettytable-rs = { version = "0.10.0", optional = true }
+
+[features]
+debug = ["dep:prettytable-rs"]
