--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 prettytable-rs = { version = "0.10.0", optional = true }
+sdl2 = { version = "0.37.0" }
 
 [features]
 debug = ["dep:prettytable-rs"]
